# MODEL

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: ubuntu24.yml
benchmark/: CMakeLists.txt  benchmark_lu.cpp  benchmark_strassen.cpp  plot.py
examples/: CMakeLists.txt  pluq_mpfr.cpp  pluq_simple.cpp  qr.cpp  rounding.cpp
include/: LU.hpp  Mat.hpp  MatView.hpp  QR.hpp  StrassenInversion.hpp  StrassenInversionFast.hpp  StrassenMultiplication.hpp  io.hpp  random.hpp
scripts/: build_test_benchmark.sh
test/: CMakeLists.txt  test_lu.cpp  test_mat.cpp  test_mat_view.cpp  test_strassen_inversion.cpp  test_strassen_multiplication.cpp  test_utils.hpp
